code/java/FactSetFunds/v1/docs/DistCurrent.md


# DistCurrent


## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**fsymId** | **String** | FactSet Security Identifier. Six alpha-numeric characters, excluding vowels, with a -S suffix (XXXXXX-S), resolved from the requestId of the Fund requested. |  [optional]
**date** | **LocalDate** | The date of the distribution in YYYY-MM-DD format. |  [optional]
**currency** | **String** | ISO Currency |  [optional]
**totalDistributions** | **Double** | Total Distributions. |  [optional]
**returnOfCapital** | **Double** | Return on Capital. |  [optional]
**qualifiedDividends** | **Double** | Qualified Dividends. |  [optional]
**nonQualifiedDividends** | **Double** | Non-Qualified Dividends. |  [optional]
**dailyAccruedDividends** | **Double** | Daily Accrued Dividends. |  [optional]
**stCapitalGains** | **Double** | Short-Term Capital Gains. |  [optional]
**ltCapitalGains** | **Double** | Long-Term Capital Gains. |  [optional]
**indicatedAnnualDividend** | **Double** | Indicated annual dividend. |  [optional]
**distFrequency** | **String** | Distribution frequency. |  [optional]
**ltmDistYield** | **Double** | Distribution yield for the last twelve months. |  [optional]
**firstDistDate** | **LocalDate** | The date of the funds first distribution in YYYY-MM-DD format. |  [optional]
**sevenDayNetSecYield** | **Double** | Net SEC yield for the last seven days. |  [optional]
**sevenDayGrossSecYield** | **Double** | Gross SEC yield for the last seven days. |  [optional]
**thirtyDayNetSecYield** | **Double** | Net SEC yield for the thirty thirty days. |  [optional]
**thirtyDayGrossSecYield** | **Double** | Gross SEC yield for the last thirty days. |  [optional]
**requestId** | **String** | The requested Id sent as input. |  [optional]


## Implemented Interfaces

* Serializable


